feat: add header desktop

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,55 @@
 <header class="header">
-    <div class="container">
-
+  <div class="container">
+    <div class="header__content">
+      <div class="header__content_logo">
+        <a href="#">
+          <img src="img/logo.svg" alt="logo">
+        </a>
+      </div>
+      <nav class="header__content_navigation navigation">
+        <ul class="navigation__list">
+          <li class="navigation__list_link link-style submenu">
+            <a href="#">
+              Features
+            </a>
+            <svg>
+              <use xlink:href="img/icons/icons.svg#arrow"></use>
+            </svg>
+          </li>
+          <li class="navigation__list_link link-style submenu">
+            <a href="#">
+              Customers
+            </a>
+            <svg>
+              <use xlink:href="img/icons/icons.svg#arrow"></use>
+            </svg>
+          </li>
+          <li class="navigation__list_link link-style">
+            <a href="#">
+              Pricing
+            </a>
+          </li>
+          <li class="navigation__list_link link-style submenu">
+            <a href="#">
+              Resources
+            </a>
+            <svg>
+              <use xlink:href="img/icons/icons.svg#arrow"></use>
+            </svg>
+          </li>
+        </ul>
+        <nav class="navigation__cta">
+          <a class="navigation__cta_link link-style" href="#">
+            Login
+          </a>
+          <a class="navigation__cta_link link-style ico-svg" href="tel:(02)356 888 55">
+            (02)356 888 55
+          </a>
+          <a class="btn-cta _orange" href="#">
+            Free Demo
+          </a>
+        </nav>
+      </nav>
     </div>
+  </div>
 </header>
