--- a/#src/index.html
+++ b/#src/index.html
@@ -16,12 +16,7 @@
 <body>
 <div class="wrapper">
   @@include('_header.html')
-  <!-- <div class="root"></div>
-  <div class="main-screen">
-      <div class="main-screen__bg ibg">
-          <img src="img/bg.png" alt="картинка">
-      </div>
-  </div> -->
+<!--  <div class="root"></div>-->
   <div class="page">
 
   </div>
