fix: dropdown menu

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -21,10 +21,13 @@
                   <li>
                     <a href="#">
                       <span>
-                        <img src="img/why.svg" alt="logo">
+                        <img src="img/transport-m.svg" alt="logo">
                       </span>
                       <p>
                         Transport management
+                        <small>
+                          Grow without the paperwork
+                        </small>
                       </p>
                     </a>
                   </li>
@@ -35,6 +38,9 @@
                       </span>
                       <p>
                         Warehouse management
+                        <small>
+                          Inventory control & tracking
+                        </small>
                       </p>
                     </a>
                   </li>
@@ -45,6 +51,9 @@
                       </span>
                       <p>
                        Delivery management
+                        <small>
+                          Deliver more, on time
+                        </small>
                       </p>
                     </a>
                   </li>
@@ -55,6 +64,9 @@
                       </span>
                       <p>
                         Driver delivery app
+                        <small>
+                          Manage jobs on the go
+                        </small>
                       </p>
                     </a>
                   </li>
@@ -62,7 +74,7 @@
               </li>
               <li>
                 <strong>
-                  Features
+                   Key Features
                 </strong>
                 <ul>
                   <li>
@@ -106,6 +118,9 @@
                     </a>
                   </li>
                 </ul>
+                <a href="#">
+                  More features
+                </a>
               </li>
             </ul>
           </li>
