feat: start mob.

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -310,6 +310,11 @@
           </a>
         </nav>
       </nav>
+      <div class="header__content_burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </div>
 </header>
