--- a/#src/index.html
+++ b/#src/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="wrapper">
   @@include('_header.html')
-<!--  <div class="root"></div>-->
+  <div class="root"></div>
   <div class="page">
 
   </div>
