fix: change class header

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -8,7 +8,7 @@
       </div>
       <nav class="header__content_navigation navigation">
         <ul class="navigation__list">
-          <li class="navigation__list_link link-style submenu">
+          <li class="navigation__list_link link-style submenu-item-trigger">
             <a href="#">
               Features
             </a>
@@ -124,7 +124,7 @@
               </li>
             </ul>
           </li>
-          <li class="navigation__list_link link-style submenu">
+          <li class="navigation__list_link link-style submenu-item-trigger">
             <a href="#">
               Customers
             </a>
@@ -203,7 +203,7 @@
               Pricing
             </a>
           </li>
-          <li class="navigation__list_link link-style submenu">
+          <li class="navigation__list_link link-style submenu-item-trigger">
             <a href="#">
               Resources
             </a>
