feat: add hero-block desktop

--- a/#src/index.html
+++ b/#src/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="css/style.min.css">
   <title>Transvirtual</title>
 
@@ -18,7 +19,79 @@
   @@include('_header.html')
   <div class="root"></div>
   <div class="page">
-
+    <section class="hero-block">
+      <div class="container _medium">
+        <div class="hero-block__top-content">
+          <p>
+            <strong>
+              Run your entire transport business from one platform
+            </strong>
+          </p>
+          <h1>
+            Pay only for what you use
+          </h1>
+          <ul>
+            <li>
+              <span><img src="img/pricing/location-ico.svg" alt="logo"></span>
+              <p>No upfront costs</p>
+            </li>
+            <li>
+              <span><img src="img/pricing/writing-ico.svg" alt="logo"></span>
+              <p>No long-term contracts</p>
+            </li>
+            <li>
+              <span><img src="img/pricing/8-ico.svg" alt="logo"></span>
+              <p>Unlimited seats</p>
+            </li>
+          </ul>
+        </div>
+        <div class="hero-block__bottom-content bottom-content">
+          <div class="bottom-content__pricing">
+            <div class="bottom-content__pricing-top">
+              <span>
+                <img src="img/pricing/pricing.svg" alt="picture">
+              </span>
+              <strong>
+                $0.25
+              </strong>
+            </div>
+            <div class="bottom-content__pricing-bottom">
+              <small>
+                per con note
+              </small>
+            </div>
+            <a class="btn-cta-v _orange ico-play-mod" href="#">
+              <svg>
+                <use xlink:href="img/icons/icons.svg#play-ico"></use>
+              </svg>
+              <span>Book a Demo</span>
+            </a>
+          </div>
+          <div class="bottom-content__list">
+            <p>
+              Save time on paperwork for only 25¢ per con note
+            </p>
+            <small>
+              Included:
+            </small>
+            <ul>
+              <li>iOS & Android delivery apps</li>
+              <li>Easy to use admin dashboard</li>
+              <li>Electoral proof of delivery</li>
+              <li>Smart route planning</li>
+              <li>Customer tracking page</li>
+              <li>Live vehicle tracking</li>
+              <li>Automated invoicing</li>
+              <li>Consignment management</li>
+              <li>Pallet management</li>
+              <li>Item level barcode scanning</li>
+              <li>Driver alerts</li>
+              <li>Run sheets</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   @@include('_footer.html')
 </div>
