--- a/#src/index.html
+++ b/#src/index.html
@@ -92,6 +92,36 @@
         </div>
       </div>
     </section>
+    <div class="logos-list">
+      <div class="container">
+        <ul>
+          <li>
+            <img src="img/pricing/logos/1.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/2.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/3.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/4.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/5.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/6.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/7.png" alt="logo">
+          </li>
+          <li>
+            <img src="img/pricing/logos/8.png" alt="logo">
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
   @@include('_footer.html')
 </div>
