feat: add reviews desktop

--- a/#src/index.html
+++ b/#src/index.html
@@ -92,7 +92,7 @@
         </div>
       </div>
     </section>
-    <div class="logos-list">
+    <section class="logos-list">
       <div class="container">
         <ul>
           <li>
@@ -121,7 +121,85 @@
           </li>
         </ul>
       </div>
-    </div>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <div class="reviews__comment">
+            <span>
+              <img src="img/pricing/person.jpg" alt="person">
+              <strong>
+                Holly Kemps
+              </strong>
+              <p>
+                JustFreight
+              </p>
+            </span>
+          <p>
+            "TransVirtual has really changed the way we operate our business. It has given us the ability to become
+            completely transparent with all our customers and helped us
+            <strong>grow our business and increase revenue over a short period of time.</strong>"
+          </p>
+        </div>
+        <ul class="reviews__cards">
+          <li class="blue">
+            <img src="img/pricing/logos/google.svg" alt="logo">
+            <p>
+              <strong>
+                “It has really helped to improve the efficiency of our business.”
+              </strong>
+            </p>
+            <span>
+              <strong></strong>
+              <small>
+                4.8/5
+              </small>
+            </span>
+          </li>
+          <li class="yellow">
+            <img src="img/pricing/logos/software.svg" alt="logo">
+            <p>
+              <strong>
+                “I like the fact that we don't have to go chasing drivers for manual POD's or loosing revenue because of lost cons.”
+              </strong>
+            </p>
+            <span>
+              <strong></strong>
+              <small>
+                4.8/5
+              </small>
+            </span>
+          </li>
+          <li class="green">
+            <img src="img/pricing/logos/get.svg" alt="logo">
+            <p>
+              <strong>
+                “Great experience with a number of options still to be explored.”
+              </strong>
+            </p>
+            <span>
+              <strong></strong>
+              <small>
+                4.8/5
+              </small>
+            </span>
+          </li>
+          <li class="blue-d">
+            <img src="img/pricing/logos/capterra.svg" alt="logo">
+            <p>
+              <strong>
+                “I would highly recommend the product supported by a dedicated team based here in Australia.”
+              </strong>
+            </p>
+            <span>
+              <strong></strong>
+              <small>
+                4.8/5
+              </small>
+            </span>
+          </li>
+        </ul>
+      </div>
+    </section>
   </div>
   @@include('_footer.html')
 </div>
