feat: add reviews mob.

--- a/#src/index.html
+++ b/#src/index.html
@@ -140,6 +140,7 @@
             <strong>grow our business and increase revenue over a short period of time.</strong>"
           </p>
         </div>
+        <div class="reviews__hand"></div>
         <ul class="reviews__cards">
           <li class="blue">
             <img src="img/pricing/logos/google.svg" alt="logo">
