feat: add stack-up desktop

--- a/#src/index.html
+++ b/#src/index.html
@@ -160,7 +160,8 @@
             <img src="img/pricing/logos/software.svg" alt="logo">
             <p>
               <strong>
-                “I like the fact that we don't have to go chasing drivers for manual POD's or loosing revenue because of lost cons.”
+                “I like the fact that we don't have to go chasing drivers for manual POD's or loosing revenue because of
+                lost cons.”
               </strong>
             </p>
             <span>
@@ -199,6 +200,56 @@
             </span>
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="stack-up">
+      <div class="container">
+        <div class="stack-up__content">
+          <div class="stack-up__content-text">
+            <h3>
+              See how TransVirtual stacks up
+            </h3>
+            <p>
+              Compare TransVirtual side by side with other tools. You’ll see why transport businesses love TransVirtual.
+            </p>
+            <a class="btn-cta-v _orange ico-play-mod" href="#">
+              <svg>
+                <use xlink:href="img/icons/icons.svg#play-ico"></use>
+              </svg>
+              <span>Compare to other tools</span>
+            </a>
+            <p>
+              <a href="#">
+                Or book a personalized demo
+              </a>
+            </p>
+          </div>
+          <div class="stack-up__content-map">
+            <img src="img/pricing/map.jpg" alt="picture">
+            <p>
+              <span>
+              Invoicing
+            </span>
+              <span>
+              Accounting
+            </span>
+              <span>
+              Pricing
+            </span>
+            </p>
+            <p>
+              <span>
+              Reporting
+            </span>
+              <span>
+              Dispatching
+            </span>
+              <span>
+              Delivery
+            </span>
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </div>
