feat: add questions desktop + mob.

--- a/#src/index.html
+++ b/#src/index.html
@@ -282,6 +282,98 @@
         </ul>
       </div>
     </section>
+    <section class="questions">
+      <div class="container">
+        <h3>
+          Frequently asked questions
+        </h3>
+        <ul class="questions__list">
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              Who uses a Transport Management System?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aut culpa deleniti dolores
+                molestiae nisi reiciendis repudiandae tempore unde voluptatum.
+              </li>
+            </ul>
+          </li>
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              How does a Transport Management System add value?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto beatae commodi dicta ea eligendi enim, esse et impedit laborum nemo odio quibusdam. Ad aliquid asperiores cumque delectus ea excepturi expedita id ipsa ipsam magnam maxime, minima modi mollitia nostrum nulla optio quaerat recusandae rem sequi soluta tempore tenetur voluptatem.
+              </li>
+            </ul>
+          </li>
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              Why should I invest in a Transport Management System?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor sit amet.
+              </li>
+            </ul>
+          </li>
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              At what volumes do I need a Transport Management System (TMS)?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto atque aut delectus dolor doloribus excepturi illum iure, labore quibusdam quo recusandae sequi voluptas. Aperiam.
+              </li>
+            </ul>
+          </li>
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              What freight profiles does TransVirtual work with?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor.
+              </li>
+            </ul>
+          </li>
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              Why should we use a cloud-based solution?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A explicabo facere facilis ipsam iste molestiae mollitia quisquam quos rem voluptate.
+              </li>
+            </ul>
+          </li>
+          <li class="submenu-questions">
+            <p>
+              <span></span>
+              How long does implementation take?
+            </p>
+            <ul class="dropdown-menu">
+              <li>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam culpa cum eligendi est ipsa repudiandae saepe.
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <div class="questions__see">
+          <p>
+            See more FAQs
+          </p>
+        </div>
+      </div>
+    </section>
   </div>
   @@include('_footer.html')
 </div>
