--- a/#src/index.html
+++ b/#src/index.html
@@ -284,9 +284,9 @@
     </section>
     <section class="questions">
       <div class="container">
-        <h3>
+        <h2>
           Frequently asked questions
-        </h3>
+        </h2>
         <ul class="questions__list">
           <li class="submenu-questions">
             <p>
@@ -307,7 +307,10 @@
             </p>
             <ul class="dropdown-menu">
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto beatae commodi dicta ea eligendi enim, esse et impedit laborum nemo odio quibusdam. Ad aliquid asperiores cumque delectus ea excepturi expedita id ipsa ipsam magnam maxime, minima modi mollitia nostrum nulla optio quaerat recusandae rem sequi soluta tempore tenetur voluptatem.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto beatae commodi dicta ea
+                eligendi enim, esse et impedit laborum nemo odio quibusdam. Ad aliquid asperiores cumque delectus ea
+                excepturi expedita id ipsa ipsam magnam maxime, minima modi mollitia nostrum nulla optio quaerat
+                recusandae rem sequi soluta tempore tenetur voluptatem.
               </li>
             </ul>
           </li>
@@ -329,7 +332,8 @@
             </p>
             <ul class="dropdown-menu">
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto atque aut delectus dolor doloribus excepturi illum iure, labore quibusdam quo recusandae sequi voluptas. Aperiam.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto atque aut delectus dolor
+                doloribus excepturi illum iure, labore quibusdam quo recusandae sequi voluptas. Aperiam.
               </li>
             </ul>
           </li>
@@ -351,7 +355,8 @@
             </p>
             <ul class="dropdown-menu">
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A explicabo facere facilis ipsam iste molestiae mollitia quisquam quos rem voluptate.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A explicabo facere facilis ipsam iste
+                molestiae mollitia quisquam quos rem voluptate.
               </li>
             </ul>
           </li>
@@ -362,7 +367,8 @@
             </p>
             <ul class="dropdown-menu">
               <li>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam culpa cum eligendi est ipsa repudiandae saepe.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam culpa cum eligendi est ipsa
+                repudiandae saepe.
               </li>
             </ul>
           </li>
@@ -371,6 +377,26 @@
           <p>
             See more FAQs
           </p>
+        </div>
+      </div>
+    </section>
+    <section class="check-out">
+      <div class="container">
+        <div class="check-out__content">
+          <p>
+            <strong>
+              Not a transport or logistics business?
+            </strong>
+            <small>
+              See Express, for businesses that need to deliver their products.
+            </small>
+          </p>
+          <a class="btn-cta-v _white ico-play-mod" href="#">
+            <svg>
+              <use xlink:href="img/icons/icons.svg#play-ico"></use>
+            </svg>
+            <span>Check out Express</span>
+          </a>
         </div>
       </div>
     </section>
