fix: questions link

--- a/#src/index.html
+++ b/#src/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="css/style.min.css">
   <title>Transvirtual</title>
 
-  <!--  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">-->
   <!--  <link rel="preload" href="fonts/Inter-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"/>-->
   <!--  <link rel="preload" href="fonts/Inter-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"/>-->
   <!--  <link rel="preload" href="fonts/Inter-Bold.woff" as="font" type="font/woff" crossorigin="anonymous"/>-->
@@ -374,9 +373,9 @@
           </li>
         </ul>
         <div class="questions__see">
-          <p>
+          <a href="#">
             See more FAQs
-          </p>
+          </a>
         </div>
       </div>
     </section>
